2012-05-03  Paul A. Rombouts  <p.a.rombouts@home.nl>

	* src/cache.c
	Make the rrset list used for purging circular with a sentinel node
	instead of NULL terminated. This makes insertion and deletion of nodes
	simpler and more efficient.

2012-04-23  Paul A. Rombouts  <p.a.rombouts@home.nl>

	* src/dns_query.c
	Refine the return values of p_dns_cached_resolve(), p_dns_resolve() and
	p_recursive_query() so that they distinguish between answers found in
	the cache and replies obtained by querying other servers.
	This, among other things, can be used to prevent data that was recently
	obtained from the cache needlessly being added back to the cache.

2012-04-22  Paul A. Rombouts  <p.a.rombouts@home.nl>

	* configure.in
	On the Linux platform, check if we can compile and link with the
	-pthread flag instead of linking with -lpthread.

2012-04-21  Paul A. Rombouts  <p.a.rombouts@home.nl>

	* src/dns_query.c
	When following the delegation chain trying to get an authoritative
	answer, pdnsd would answer with SERVFAIL if it failed to get a reply
	from the last server in the chain. Instead pdnsd will now use the last
	reply in the chain with RCode=0 that raised the AA or RA flag, if there
	is one.

2012-04-19  Paul A. Rombouts  <p.a.rombouts@home.nl>

	* src/cache.c
	In report_cache_stat(), make copies of volatile data to get a
	consistent data set before making calculations with cache size and
	entry numbers.

2012-04-16  Paul A. Rombouts  <p.a.rombouts@home.nl>

	* src/netdev.c
	If we can't open /proc/net/if_inet6 in is_local_addr() log a warning
	message.

2012-04-15  Paul A. Rombouts  <p.a.rombouts@home.nl>

	* src/dns_query.c
	The code checking for duplicate IP addresses obtained from NS records
	in auth_ok() has been slightly optimized.

2012-04-12  Paul A. Rombouts  <p.a.rombouts@home.nl>

	* src/dns_query.c
	When resolving nameservers obtained from NS records, allow pdnsd to use
	more than one IP address per nameserver.