@@ -1,3 +1,9 @@
+2012-05-04  Paul A. Rombouts  <p.a.rombouts@home.nl>
+
+	* src/cache.c, src/cache.h, src/dns_query.c
+	Eliminate some unnecessary copying of data when adding stuff to the
+	cache with add_cache() (which is now called merge_cache()).
+
 2012-05-03  Paul A. Rombouts  <p.a.rombouts@home.nl>
 
 	* src/cache.c
